# farm-flow-regenerative

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
app/: __init__.py  agent.py
contracts/: kenya_regenerative_transition_v1.yaml
data/fixtures/: scenarios.json
data/provenance/: datasets.yaml
farmflow/: __init__.py  api.py  engine.py  fixtures.py  models.py  policy.py  workflow.py
frontend/: app.js  index.html  styles.css
mcp_servers/: __init__.py  climate_server.py  contract_server.py
scripts/: run_demo_cases.py
skills/assessing-climate-stress/: SKILL.md
skills/assessing-climate-stress/agents/: openai.yaml
skills/assessing-climate-stress/references/: routing-cases.json
skills/explaining-climate-relief/: SKILL.md
skills/explaining-climate-relief/agents/: openai.yaml
skills/explaining-climate-relief/references/: routing-cases.json
skills/preparing-human-review/: SKILL.md
skills/preparing-human-review/agents/: openai.yaml
skills/preparing-human-review/references/: routing-cases.json
skills/validating-transition-contract/: SKILL.md
skills/validating-transition-contract/agents/: openai.yaml
skills/validating-transition-contract/references/: routing-cases.json
specs/: architecture.md  behaviors.feature  farmflow.md  threat-model.md
tests/evals/: golden_cases.json  test_golden_cases.py
tests/integration/: test_api.py  test_mcp.py
tests/security/: test_frontend_language.py
tests/unit/: test_engine.py  test_policy.py  test_workflow.py
